# tobii-munger

./: LICENSE.txt  README.md  pyproject.toml
src/tobii_munger/: __about__.py  __init__.py  convert.py  io.py
